# iris

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  test.yml
docs/: daemon.md  operations.md  overview.md
spec/: cli-spec.md  daemon-spec.md  manifest-spec.md  system-spec.md
src/: api.rs  cli.rs  daemon.rs  error.rs  lib.rs  main.rs  models.rs  ops.rs  repo.rs  state.rs  store.rs
tests/: iris_flow.rs
