[package]
name = "iris"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
blake3 = "1.8.3"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
ed25519-dalek = "2.2.0"
libc = "0.2.183"
rusqlite = { version = "0.38.0", features = ["bundled"] }
semver = "1.0.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.0.6"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.26.0"